--- a/src/components/contacts/contactList.css
+++ b/src/components/contacts/contactList.css
@@ -1,2 +1,13 @@
 .contact-list {
 }
+.grid-item{
+    width: 100%;
+    height: 100%;
+    padding: 10px;
+    box-sizing: border-box;
+}
+.my_com:active:hover{
+    transform: rotate(5deg);
+    transition: 300ms ease-in-out all;
+
+}
